# lab06

./: CMakeLists.txt  CPackConfig.cmake  ChangeLog.md  DESCRIPTION  README.md  input.txt  travis.yml
.github/workflows/: build.yml
artifacts/: banking-0.1.0.0-Linux.deb  banking-0.1.0.0-Linux.rpm  banking-0.1.0.0-Linux.sh  banking-0.1.0.0-Linux.tar.Z
tests/: tests.cpp
